added functionality to the buttons
doesn't communicate with external database yet

--- a/Roommates/app/src/main/res/layout/activity_register.xml
+++ b/Roommates/app/src/main/res/layout/activity_register.xml
@@ -59,7 +59,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText" />
+        android:id="@+id/etUserName" />
 
     <TextView
         android:layout_width="wrap_content"
