--- a/Roommates/app/src/main/res/layout/activity_register.xml
+++ b/Roommates/app/src/main/res/layout/activity_register.xml
@@ -59,6 +59,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:ems="10"
         android:id="@+id/etUserName" />
 
     <TextView
