--- a/Roommates/app/src/main/res/menu/menu_main.xml
+++ b/Roommates/app/src/main/res/menu/menu_main.xml
@@ -1,14 +1,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
+    <item android:id="@+id/action_refresh"
+        android:title="@string/action_refresh"
+        android:icon="@drawable/ic_sync_black_24dp"
+        android:showAsAction="ifRoom"   />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
-    <item android:id="@+id/action_logout"
-        android:title="@string/action_logout"
-        android:orderInCategory="101"
         android:showAsAction="never" />
     <item android:id="@+id/action_search"
         android:title="@string/action_search"
-        android:showAsAction="ifRoom"   />
+        android:showAsAction="never"   />
+    <item android:id="@+id/action_help"
+        android:title="@string/action_help"
+        android:showAsAction="never" />
+    <item android:id="@+id/action_signout"
+        android:title="@string/action_signout"
+        android:showAsAction="never" />
+
+
 </menu>
